# dyn

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  taplo.toml
.github/workflows/: deploy.yml
crates/box-tt/: Cargo.toml
crates/box-tt/examples/: enum.rs  struct.rs
crates/box-tt/src/: box_new.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: environment.rs  error.rs  lib.rs  value.rs
crates/interfaces/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/lexer/src/lexer/: comment.rs  identifier.rs  integer.rs  keyword.rs  punctuation.rs  string.rs  whitespace.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  cst.rs  dyn.lalrpop  dynlang.lalrpop  lexer.rs  lib.rs  macros.rs  parser.rs  visitor.rs
crates/parser/src/lexer/: tests.rs  token.rs
crates/parser/src/parser/: tests.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs
crates/treesitter/: Cargo.toml
crates/treesitter/src/: main.rs
docs/: .gitignore  build-from-source.md  index.md  markdown-examples.md  package.json  playground.md  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/components/: Buttons.vue  Editor.vue  Playground.vue  Split.vue
docs/guide/: intro.md
docs/guide/getting-started/: build-from-source.md  installation.md  quickstart.md
docs/guide/syntax-overview/: array.md  basic-syntax.md  function.md  record.md
docs/reference/: cli.md  syntax.md
dyn-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
dyn-vscode/syntaxes/: dyn.tmLanguage.json
examples/: arithmetics.dyn  closure.dyn  comment.dyn  compare.dyn  curry.dyn  diagnostics.dyn  divide-by-zero.dyn  error.dyn  extra-token.dyn  fib.dyn  func.dyn  if.dyn  invalid-token.dyn  loop.dyn  nil.dyn  scope.dyn  unrecognized-eof.dyn
tree-sitter-dyn/: Cargo.toml  binding.gyp  clippy.toml  grammar.js  package.json  pnpm-lock.yaml
tree-sitter-dyn/bindings/node/: binding.cc  index.js
tree-sitter-dyn/bindings/rust/: lib.rs
tree-sitter-dyn/src/: grammar.json  node-types.json  parser.c
