[package]
name = "dyn-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.14"
indoc = "2.0.4"
maplit = "1.0.2"
parser = { version = "0.1.0", path = "../parser" }
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
