[package]
name = "dyn-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.14"
indoc = "2.0.4"
maplit = "1.0.2"
miette = { git = "https://github.com/zkat/miette", rev = "d37ada876a5831d3f47622274e334c9a24aa5d2b" }
parser = { version = "0.1.0", path = "../parser" }
span = { version = "0.1.0", path = "../span" }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
