[package]
edition = "2021"
name = "dyn-core"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.14"
dyn-lexer = { version = "0.1.0", path = "../lexer" }
dyn-span = { version = "0.1.0", path = "../span" }
miette = { git = "https://github.com/zkat/miette", rev = "d37ada876a5831d3f47622274e334c9a24aa5d2b" }
parser = { version = "0.1.0", path = "../parser" }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
indoc = "2.0.4"
maplit = "1.0.2"
pretty_assertions = "1.4.0"
