[package]
edition = "2021"
name = "lexer"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
span = { version = "0.1.0", path = "../span" }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
winnow = "0.5.39"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
