[package]
edition = "2021"
name = "dyn-lexer"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-span = { version = "0.1.0", path = "../span" }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
winnow = "0.5.39"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
