[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
box-tt = { version = "0.1.0", path = "../box-tt" }
indoc = "2.0.4"
lalrpop-util = "0.20.0"
logos = "0.13.0"
pretty_assertions = "1.4.0"
strum = { version = "0.25.0", features = ["derive"] }
tap = "1.0.1"

[build-dependencies]
lalrpop = "0.20.0"
