[package]
edition = "2021"
name = "parser"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
box-tt = { version = "0.1.0", path = "../box-tt" }
dyn-lexer = { version = "0.1.0", path = "../lexer" }
dyn-span = { version = "0.1.0", path = "../span" }
lalrpop-util = "0.20.0"
strum = { version = "0.25.0", features = ["derive"] }
tap = "1.0.1"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[build-dependencies]
lalrpop = "0.20.0"
